<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/explore_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quantum_white_100"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:contentDescription="menu button"
            android:padding="30dp"
            android:src="@drawable/icon_menu" />

        <TextView
            android:id="@+id/text_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:text="Settings"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/indoorNavigationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="20dp"
                android:text="Indoor Navigation"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/stairsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indoorNavigationText"
                android:padding="10dp"
                android:src="@drawable/ic_fire" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/indoorNavigationText"
                android:layout_toEndOf="@id/stairsIcon"
                android:padding="25dp"
                android:text="Stairs"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_stairs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/indoorNavigationText"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/stairsIcon"
                android:checked="true"
                android:padding="25dp" />

            <ImageView
                android:id="@+id/escalatorsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stairsIcon"
                android:padding="10dp"
                android:src="@drawable/ic_escalator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/stairsIcon"
                android:layout_toEndOf="@id/escalatorsIcon"
                android:padding="25dp"
                android:text="Escalators"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_escalators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stairsIcon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/escalatorsIcon"
                android:checked="true"
                android:padding="25dp" />

            <ImageView
                android:id="@+id/elevatorsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/escalatorsIcon"
                android:padding="10dp"
                android:src="@drawable/ic_elavator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/escalatorsIcon"
                android:layout_toEndOf="@id/elevatorsIcon"
                android:padding="25dp"
                android:text="Elevators"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_elevators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/escalatorsIcon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/elevatorsIcon"
                android:checked="true"
                android:padding="25dp" />

            <ImageView
                android:id="@+id/restroomsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/elevatorsIcon"
                android:padding="10dp"
                android:src="@drawable/ic_restroom" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/elevatorsIcon"
                android:layout_toEndOf="@id/restroomsIcon"
                android:padding="25dp"
                android:text="Restrooms"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_restrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/elevatorsIcon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/restroomsIcon"
                android:checked="true"
                android:padding="25dp" />

            <ImageView
                android:id="@+id/printersIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/restroomsIcon"
                android:padding="10dp"
                android:src="@drawable/ic_printer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/restroomsIcon"
                android:layout_toEndOf="@id/printersIcon"
                android:padding="25dp"
                android:text="Printers"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_printers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/restroomsIcon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/printersIcon"
                android:checked="true"
                android:padding="25dp" />

            <ImageView
                android:id="@+id/fountainsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/printersIcon"
                android:padding="10dp"
                android:src="@drawable/ic_water" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/printersIcon"
                android:layout_toEndOf="@id/fountainsIcon"
                android:padding="25dp"
                android:text="Fountains"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_fountains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/printersIcon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/fountainsIcon"
                android:checked="true"
                android:padding="25dp" />

            <ImageView
                android:id="@+id/studyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fountainsIcon"
                android:padding="10dp"
                android:src="@drawable/ic_study_room" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/fountainsIcon"
                android:layout_toEndOf="@id/studyIcon"
                android:padding="25dp"
                android:text="Study Rooms"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_settings_studyRooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fountainsIcon"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/studyIcon"
                android:checked="true"
                android:padding="25dp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>