<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinate_layout"
    tools:context=".views.MapFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_weight="1"/>

    <include layout="@layout/search_bar_layout"/>
    <include layout="@layout/bottom_sheet_layout"/>
    <include layout="@layout/place_info_card"/>
    <include layout="@layout/instructions_sheet_layout"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>